--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
     "gatsby": "^2.18.12",
+    "gatsby-image": "^2.2.38",
     "gatsby-plugin-sass": "^2.1.27",
+    "gatsby-plugin-sharp": "^2.3.13",
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-transformer-remark": "^2.6.48",
-    "node-sass": "^4.13.0",
+    "gatsby-transformer-sharp": "^2.3.12",
+    "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
