Added Jest and set up for testing

--- a/package.json
+++ b/package.json
@@ -33,8 +33,13 @@
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
+    "babel-jest": "^24.9.0",
+    "babel-preset-gatsby": "^0.2.27",
     "gh-pages": "^2.2.0",
-    "prettier": "^1.19.1"
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^24.9.0",
+    "prettier": "^1.19.1",
+    "react-test-renderer": "^16.12.0"
   },
   "repository": {
     "type": "git",
